Removed git extension from homepage link

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.3.0"
 authors = ["Stephane Raux <stephaneyfx@gmail.com>"]
 description = "Evaluates rust code."
 license = "MIT"
-homepage = "https://github.com/stephaneyfx/everust.git"
+homepage = "https://github.com/stephaneyfx/everust"
 repository = "https://github.com/stephaneyfx/everust.git"
 documentation = "https://docs.rs/everust"
 keywords = ["evaluate", "interpret", "interpreter", "repl"]
